# mapbox-base

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  LICENSE.thirdparty  README.md  license-lock
.github/ISSUE_TEMPLATE/: release-issue-template.md
cmake/: mapbox-base.cmake
docs/: value.md
extras/: CMakeLists.txt  rapidjson.cmake
extras/args/: .gitrepo
extras/expected-lite/: .gitrepo
extras/filesystem/: .gitrepo
extras/kdbush.hpp/: .gitrepo
extras/rapidjson/: .gitrepo
include/: CMakeLists.txt
include/mapbox/: platform.hpp
include/mapbox/polyfills/mbx/: expected.hpp
include/mapbox/std/: weak.hpp
include/mapbox/util/: type_wrapper.hpp
include/mbx/: defines  optional
libs/: CMakeLists.txt  args.cmake  expected-lite.cmake  filesystem.cmake  geometry.hpp.cmake  optional.cmake  pixelmatch-cpp.cmake  rapidjson.cmake  variant.cmake
mapbox/: CMakeLists.txt
mapbox/cheap-ruler-cpp/: .gitrepo
mapbox/geojson.hpp/: .gitrepo
mapbox/geometry.hpp/: .gitrepo
mapbox/include/mapbox/io/: io.hpp
mapbox/include/mapbox/std/: optional.hpp
mapbox/include/mapbox/std/impl/: _optional.hpp
mapbox/io/: CMakeLists.txt  README.md
mapbox/io/include/mapbox/: io.hpp
mapbox/io/src/: io.cpp
mapbox/jni.hpp/: .gitrepo
mapbox/optional/: .gitrepo
mapbox/pixelmatch-cpp/: .gitrepo
mapbox/src/io/: io.cpp
mapbox/supercluster.hpp/: .gitrepo
mapbox/typewrapper/: README.md
mapbox/value/: README.md
mapbox/value/include/mapbox/: value.hpp
mapbox/variant/: .gitrepo
mapbox/weak/: README.md
mapbox/weak/include/mapbox/: weak.hpp
platform/android/: CMakeLists.txt
scripts/: check-license.sh
scripts/ci/: install-tests.sh  run-syntax-check.sh  run-tests.sh
scripts/license-checker/: .flowconfig  license-checker  main.js  package-lock.json  package.json
test/: .gitignore  CMakeLists.txt  include.cpp  io.cpp  io_delete.cpp  io_delete.hpp  test.cmake  test_defines.hpp.in  type_wrapper.cpp  value.cpp  weak.cpp
test/io/: io_delete.cpp
test/mbx/: optional.cpp
test/std/: optional.cpp  weak.cpp
